clang/test/BSC/Negative/Trait/r1/definition_10/definition_10.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F {
  int foo(This* this);
};

_Impl _Trait F for _Trait F;  // expected-error {{invalid syntax, semi not expected after '_Trait F'}}
                           // expected-error@-1 {{function 'foo' in '_Trait F' is not implemented for '_Trait F'}}

int main() {
  return 0;
}
